# helicon

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  conda-lock.yml  environment.yml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: sunbird_3d.yaml
docs/: 404.html  changelog.md  contributing.md  faq.md  index.html  index.md  objects.inv  physics.md  sitemap.xml  spec.md
docs/api/: config.md  fields.md  optimize.md  postprocess.md  runner.md  validate.md
docs/changelog/: index.html
docs/contributing/: index.html
docs/faq/: index.html
docs/guide/: configuration.md  install.md  optimization.md  postprocessing.md  quickstart.md  running.md  scans.md
docs/physics/: index.html
docs/search/: search_index.json
docs/spec/: index.html
docs/validation/: dimov.md  free_expansion.md  index.html  index.md  merino_ahedo.md  vasimr.md
docs_src/: changelog.md  contributing.md  index.md  spec.md
docs_src/api/: config.md  detach.md  fields.md  optimize.md  perf.md  runner.md  surrogate.md  validate.md
docs_src/guide/: apple_silicon.md  install.md  postprocessing.md  quickstart.md  running.md  timing.md
docs_src/validation/: dimov.md  free_expansion.md  guiding_center.md  index.md  merino_ahedo.md  mn1d_comparison.md  vasimr.md
helicon/: __init__.py  _reproducibility.py  cli.py
helicon/config/: __init__.py  parser.py  warpx_generator.py
helicon/fields/: __init__.py  biot_savart.py  frc_topology.py  import_external.py
helicon/optimize/: __init__.py  analytical.py  constraints.py  gradient.py  objectives.py  scan.py
helicon/postprocess/: __init__.py  normalize.py  plots.py  propbench.py  pulsed.py  report.py
helicon/runner/: __init__.py  batch.py  convergence.py  launch.py
helicon/validate/: __init__.py  proximity.py  report.py  runner.py
magnozzlex/: __init__.py  _reproducibility.py  cli.py
magnozzlex/config/: __init__.py  parser.py  validators.py  warpx_generator.py
magnozzlex/fields/: __init__.py  biot_savart.py  cache.py  field_lines.py  frc_topology.py  import_external.py
magnozzlex/optimize/: __init__.py  analytical.py  constraints.py  gradient.py  objectives.py  pareto.py  scan.py  surrogate.py
magnozzlex/postprocess/: __init__.py  detachment.py  fieldline_classify.py  moments.py  propbench.py  pulsed.py  report.py  thrust.py
magnozzlex/runner/: __init__.py  batch.py  checkpoints.py  convergence.py  diagnostics.py  launch.py
magnozzlex/validate/: __init__.py  proximity.py  report.py  runner.py
notebooks/: 01_quickstart.ipynb  02_custom_nozzle.ipynb  03_parameter_scan.ipynb  04_interpret_detachment.ipynb
results/sunbird/: report.json  run_metadata.json  warpx_input
results/validation/: validation_report.json
scripts/: make_exhaust_video.py  make_nozzle_video.py  make_nozzle_video_3d.py  make_video.py  make_video_3d.py  plot_comparison.py  run_validation.py
src/helicon/: __init__.py  _mlx_utils.py  _reproducibility.py  benchmark.py  cli.py  doctor.py  provenance.py  scaffold.py
tests/integration/: test_pipeline.py
tests/unit/: test_analytical.py  test_batch.py  test_benchmark.py  test_bfield_plot.py  test_biot_savart.py  test_biot_savart_3d.py  test_cache.py  test_cad_export.py  test_checkpoints.py  test_cli.py  test_cloud.py  test_coil_constraints.py  test_config.py  test_constraints.py  test_convergence.py  test_detach.py  test_detach_cli_v26.py  test_detach_novel.py  test_detachment.py  test_diagnostics.py  test_dimov.py  test_doctor.py  test_field_lines.py  test_fieldline_classify.py  test_frc_topology.py  test_geometry_3d.py  test_gradient.py  test_hybrid.py  test_import_external.py  test_insitu.py  (+40 more)
(+137 files in other folders)
