[project]
name = "helicon"
version = "0.4.0"
description = "GPU-Accelerated Magnetic Nozzle Simulation & Detachment Analysis Toolkit"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "click>=8.1",
    "h5py>=3.12",
]

[project.scripts]
helicon = "helicon.cli:main"

[project.optional-dependencies]
mlx = ["mlx>=0.18"]
optimize = ["scikit-learn>=1.5"]
botorch = ["botorch>=0.12", "torch>=2.4"]
dev = ["pytest>=8.0", "scikit-learn>=1.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 95

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E741"]  # allow I for current (physics convention)

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
unresolved-import = "ignore"

[dependency-groups]
dev = [
    "matplotlib>=3.10",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "scikit-learn>=1.5",
]
