[project]
name = "helicon"
version = "2.4.0"
description = "GPU-Accelerated Magnetic Nozzle Simulation & Detachment Analysis Toolkit"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "click>=8.1",
    "h5py>=3.12",
]

[project.scripts]
helicon = "helicon.cli:main"

[project.optional-dependencies]
mlx = [
    "mlx>=0.18",
]
optimize = ["scikit-learn>=1.5"]
botorch = ["botorch>=0.12", "torch>=2.4"]
poliastro = ["poliastro>=0.17", "astropy>=5.0"]
app = ["streamlit>=1.35"]
jupyter = ["ipywidgets>=8.0", "ipython>=8.0"]
dev = ["pytest>=8.0", "scikit-learn>=1.5", "matplotlib>=3.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helicon"]

[tool.ruff]
target-version = "py311"
line-length = 95

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E741",    # allow I for current (physics convention)
    "RUF001",  # allow Unicode in string literals (physics notation: ×, ≈, etc.)
    "RUF002",  # allow Unicode in docstrings (physics notation: γ, ρ, ν, −, etc.)
    "RUF003",  # allow Unicode in comments (physics notation)
    "B905",    # zip without strict= is fine in physics/numeric code
]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
unresolved-import = "ignore"

[dependency-groups]
dev = [
    "matplotlib>=3.10",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "pytest>=8.0",
    "ruff>=0.9",
    "scikit-learn>=1.5",
    "tqdm>=4.67.3",
]
